--- a/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
+++ b/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
@@ -2,7 +2,7 @@
 - name: Create namespace
   kubernetes.core.k8s:
     state: present
-    api_ersion: v1
+    api_version: v1
     kind: Namespace
     name: "{{ ocp4_workload_prepare_hcp_secret_namespace }}"
 
