--- a/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
+++ b/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
@@ -33,6 +33,8 @@
       type: Opaque
       stringData:
         pullSecret: "{{ pull_secret_json }}"
+  retries: 10
+  delay: 10
 
 - name: Save user information
   agnosticd.core.agnosticd_user_info:
