--- a/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
+++ b/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
@@ -32,7 +32,7 @@
           cluster.open-cluster-management.io/type: kubevirt
       type: Opaque
       stringData:
-        pullSecret: "{{ pull_secret_json }}"
+        pullSecret: "{{ pull_secret_json | to_json }}"
   retries: 10
   delay: 10
 
