Add gitops policy

--- a/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
+++ b/roles/ocp4_workload_prepare_hcp/tasks/workload.yml
@@ -36,6 +36,9 @@
   retries: 10
   delay: 10
 
+- name: Set up RHACM policies for GitOps operator deployment
+  ansible.builtin.include_tasks: policy_gitops.yml
+
 - name: Save user information
   agnosticd.core.agnosticd_user_info:
     data:
