--- a/roles/ocp4_workload_prepare_hcp/tasks/remove_workload.yml
+++ b/roles/ocp4_workload_prepare_hcp/tasks/remove_workload.yml
@@ -1,8 +1,67 @@
 ---
+# ------------------------------------------------
+# Remove RHACM Policy Resources
+# ------------------------------------------------
+- name: Remove PlacementBinding
+  kubernetes.core.k8s:
+    state: absent
+    api_version: policy.open-cluster-management.io/v1
+    kind: PlacementBinding
+    name: binding-policy-gitops
+    namespace: "{{ ocp4_workload_prepare_hcp_policy_namespace }}"
+
+- name: Remove Policy
+  kubernetes.core.k8s:
+    state: absent
+    api_version: policy.open-cluster-management.io/v1
+    kind: Policy
+    name: policy-gitops-operator
+    namespace: "{{ ocp4_workload_prepare_hcp_policy_namespace }}"
+
+- name: Remove Placement
+  kubernetes.core.k8s:
+    state: absent
+    api_version: cluster.open-cluster-management.io/v1beta1
+    kind: Placement
+    name: gitops-placement
+    namespace: "{{ ocp4_workload_prepare_hcp_policy_namespace }}"
+
+- name: Remove ManagedClusterSetBinding
+  kubernetes.core.k8s:
+    state: absent
+    api_version: cluster.open-cluster-management.io/v1beta2
+    kind: ManagedClusterSetBinding
+    name: "{{ ocp4_workload_prepare_hcp_clusterset_name }}"
+    namespace: "{{ ocp4_workload_prepare_hcp_policy_namespace }}"
+
+- name: Remove ManagedClusterSet
+  kubernetes.core.k8s:
+    state: absent
+    api_version: cluster.open-cluster-management.io/v1beta2
+    kind: ManagedClusterSet
+    name: "{{ ocp4_workload_prepare_hcp_clusterset_name }}"
+
+- name: Remove policies namespace
+  kubernetes.core.k8s:
+    state: absent
+    api_version: v1
+    kind: Namespace
+    name: "{{ ocp4_workload_prepare_hcp_policy_namespace }}"
+
+# ------------------------------------------------
+# Remove original HCP resources
+# ------------------------------------------------
 - name: Remove secret from RHACM
   kubernetes.core.k8s:
     state: absent
-    template: "{{ item }}"
-  loop:
-  - secret.yaml.j2
-  - namespace.yaml.j2
+    api_version: v1
+    kind: Secret
+    name: "{{ ocp4_workload_prepare_hcp_secret_name }}"
+    namespace: "{{ ocp4_workload_prepare_hcp_secret_namespace }}"
+
+- name: Remove HCP namespace
+  kubernetes.core.k8s:
+    state: absent
+    api_version: v1
+    kind: Namespace
+    name: "{{ ocp4_workload_prepare_hcp_secret_namespace }}"
